# Chell

./: .gitignore  Cargo.toml  Chell.drawio  LICENSE  readme.md
.cargo/: RENAME-ME-TO(config).toml
src/: ai.rs  baichat_rs.rs  chat_logs.rs  database.rs  main.rs  memory_core.rs  results.rs  topics.rs  utils.rs
