[package]
name = "chell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", features = ["tokio"]}
tokio = {version = "*", features = ["rt-multi-thread"]}
meilisearch-sdk = "0.24.1"
futures = "0.3"
serde = { version="1.0",   features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
ratmom = "0.1.0"
