[package]
name = "chell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", features = ["tokio"]}
tokio = {version = "*", features = ["rt-multi-thread"]}
meilisearch-sdk = "0.24.1"
futures = "0.3"
serde = { version="1.0",   features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
ratmom = "0.1.0"
log = "0.4.19"
simplelog = "0.12.1"
stop-words = { version="0.7.2",   features = ["nltk", "iso"] }
rand = "0.8.5"
async-recursion = "1.0.4"
json-gettext = "4.0.5"
